--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>保险智能测试</title>
+    <style>
+      .v-transfer-dom .vux-x-dialog .weui-dialog {
+        overflow: inherit;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
