--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       .v-transfer-dom .vux-x-dialog .weui-dialog {
         overflow: inherit;
       }
+      .flow .weui-progress .weui-progress__bar .weui-progress__inner-bar {
+        background: linear-gradient(left, rgb(255, 241, 153), rgb(254, 222, 96));
+        background: -webkit-gradient(linear, left top, right top, from(#f6e15a), to(#f4d046));
+      }
     </style>
   </head>
   <body>
