--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
   <script src='https://cdn.bootcss.com/axios/0.17.1/axios.min.js'></script>
   <!-- <script src='static/moment.js'></script> -->
