--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
       .v-transfer-dom .vux-x-dialog .weui-dialog {
         overflow: inherit;
+        margin-left: -1.7rem;
       }
       .flow .weui-progress .weui-progress__bar .weui-progress__inner-bar {
         background: linear-gradient(left, rgb(255, 241, 153), rgb(254, 222, 96));
